--- a/examples/lazresexplorer/languages/resexplorer.it.po
+++ b/examples/lazresexplorer/languages/resexplorer.it.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2011-04-21 23:53+0200\n"
-"Last-Translator: Massimo Soricetti <notturno@quipo.it>\n"
+"PO-Revision-Date: 2014-10-03 20:01+0100\n"
+"Last-Translator: Giuliano Colla <giuliano.colla@fastwebnet.it>\n"
 "Language-Team: PincoPallo Team\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -9,6 +9,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Virtaal 0.5.1\n"
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
 
 #: reconstsunit.sabout
 msgid "About..."
@@ -28,7 +30,7 @@ msgstr "Esci"
 
 #: reconstsunit.sfile
 msgid "File"
-msgstr ""
+msgstr "File"
 
 #: reconstsunit.sfpcversion
 msgid "FPC version : "
