--- a/tools/lazdatadesktop/languages/lazdatadesktop.it.po
+++ b/tools/lazdatadesktop/languages/lazdatadesktop.it.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2011-04-22 00:25+0200\n"
-"Last-Translator: Massimo Soricetti <notturno@quipo.it>\n"
+"PO-Revision-Date: 2014-10-03 20:38+0100\n"
+"Last-Translator: Giuliano Colla <giuliano.colla@fastwebnet.it>\n"
 "Language-Team: PincoPallo Team\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -9,6 +9,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Virtaal 0.5.1\n"
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
 
 #: lazdatadeskstr.eoaddterminator
 msgid "Add terminator"
@@ -332,7 +334,6 @@ msgid "Create a new table"
 msgstr "Crea una nuova tabella"
 
 #: lazdatadeskstr.sld_actionopen
-#, fuzzy
 #| msgid "&Open..."
 msgid "&Open ..."
 msgstr "&Apri..."
@@ -396,7 +397,7 @@ msgstr "Nome"
 
 #: lazdatadeskstr.sld_connectionlv2
 msgid "Driver"
-msgstr ""
+msgstr "Driver"
 
 #: lazdatadeskstr.sld_connectionlv3
 msgid "Last used"
@@ -452,7 +453,7 @@ msgstr "Genera comandi SQL"
 
 #: lazdatadeskstr.sld_host
 msgid "Host"
-msgstr ""
+msgstr "Host"
 
 #: lazdatadeskstr.sld_importupdatedatadictionary
 msgid "Import/Update datadictionary"
@@ -472,7 +473,7 @@ msgstr "&Campi chiave"
 
 #: lazdatadeskstr.sld_lazarusdatabasedesktop
 msgid "Lazarus Database Desktop"
-msgstr ""
+msgstr "Lazarus Database Desktop"
 
 #: lazdatadeskstr.sld_linelength
 msgid "Line Length"
@@ -519,7 +520,7 @@ msgstr "Opzioni"
 
 #: lazdatadeskstr.sld_password
 msgid "Password"
-msgstr ""
+msgstr "Password"
 
 #: lazdatadeskstr.sld_recentlv1
 msgctxt "lazdatadeskstr.sld_recentlv1"
@@ -565,7 +566,7 @@ msgstr "Scegli/Aggiorna/Inserisci campi"
 
 #: lazdatadeskstr.sld_separator
 msgid "-"
-msgstr ""
+msgstr "-"
 
 #: lazdatadeskstr.sld_table
 msgid "Ta&ble"
@@ -726,7 +727,6 @@ msgid "Run query"
 msgstr "Esegui query"
 
 #: lazdatadeskstr.srowsaffected
-#, fuzzy
 #| msgid "Query executed succesfully: %d rows affected."
 msgid "Query executed successfully: %d rows affected."
 msgstr "Query eseguita correttamente: %d righe modificate."
