--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -5,7 +5,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2014-10-20 02:15+0400\n"
+"PO-Revision-Date: 2014-10-28 02:43+0300\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,3325,-1,-1\n"
@@ -15090,6 +15090,14 @@ msgstr "Показывать строку состояния"
 #: lazarusidestrconsts.lisshowunits
 msgid "Show units"
 msgstr "Показывать модули"
+
+#: lazarusidestrconsts.lisshowunitswithinitialization
+msgid "Show units with initialization/finalization sections"
+msgstr "Показывать модули с секциями initialization/finalization"
+
+#: lazarusidestrconsts.lisshowunitswithinitializationhint
+msgid "These units may initialize global data used by the program/application. Remove with care."
+msgstr "Эти модули могут инициализировать глобальные структуры данных в программе. Удаляйте с осторожностью."
 
 #: lazarusidestrconsts.lisshowunusedunits
 msgid "Show unused units ..."
